--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family: sans-serif;
+    font-family: "Poppins", sans-serif;
     margin: 0;
 }
 
@@ -44,3 +44,8 @@ nav a:hover{
         padding: 10px 0px;
     }
 }
+.poppins-medium {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
