--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,24 @@
+html{
+    background-color: rgba(255, 255, 255, 0.74);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     font-family: "Poppins", sans-serif;
     margin: 0;
+
 }
 
 a{
     text-decoration: none;
-    color: white;
+    color: rgb(5, 0, 53);
 }
 
 header{
     display: flex;
     min-height: 70px;
-    background-color: rgba(0, 110, 255, 0.678);
+    background-color: rgb(236, 241, 254);
     justify-content: space-between;
     align-items: center;
     padding: 10px;
@@ -23,17 +30,18 @@ header{
 }
 
 .logo img{
-    height: 70px;
-    margin-right: 10px;
+    height: 100px;
+    margin-right: 20px;
 }
 
 nav a{
+    font-size: 25px;
     font-weight: 600;
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
 nav a:hover{
-    color: rgb(255, 238, 2);
+    color: rgb(64, 67, 218);
 }
 
 @media (max-width:700px){
@@ -49,3 +57,86 @@ nav a:hover{
     font-weight: 500;
     font-style: normal;
   }
+
+.footer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    min-height: 100vh;
+    background-color: white;
+    position: relative;
+    width: 100%;
+    background-color: blue;
+    min-height: 100px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.social-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 10px;
+    flex-wrap: wrap;
+}
+
+.icon-elem{
+    list-style: none;
+}
+
+.icon{
+    color: white;
+    font-size: 32px;
+    display: inline-block;
+    margin: 0 10px;
+    transition: 0.5s;
+}
+
+.icon:hover{
+    transform: translateY(-10px);
+}
+
+.menu{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
+}
+
+.menu-elem{
+    list-style: none;
+}
+
+.menu-icon{
+    color: white;
+    font-size: 20px;
+    display: inline-block;
+    text-decoration: none;
+    margin: 5px 10px;
+    opacity: 0.5;
+    transition: 0.3s;
+}
+
+.menu-icon:hover{
+    opacity: 1;
+}
+
+.text{
+    color: white;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.conteiner{
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+}
