--- a/catalog.css
+++ b/catalog.css
@@ -1,4 +1,3 @@
-/* General */
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -8,12 +7,13 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url(../market-parral/img/WhatsApp_Image_2024-11-13_at_15.20.54-removebg-preview.png);
-  background-size: cover;
-  background-position: center;
-  color: white;
+  background-size: contain; /* Ajusta el tamaño de la imagen */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita repeticiones */
+  background-image: url('/img/logo.png'); /* Ruta de la imagen */
   overflow: hidden; /* Evita desplazamiento innecesario */
 }
+
 
 /* Contenedor principal */
 .container {
@@ -23,7 +23,7 @@ body {
   justify-content: center;
   width: 100%;
   height: 100%;
-  position: relative; /* Necesario para posicionar correctamente */
+  position: relative; /* posicionar correctamente */
 }
 
 /* Estilo del libro (catálogo) */
@@ -50,36 +50,23 @@ body {
   padding: 20px;
   border-radius: 10px;
   transition: transform 0.6s ease, z-index 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Estilo para la portada */
 .front-page {
   z-index: 4;
-  background: linear-gradient(-45deg, #04fac5, #6DD5FA, #02f879);
-  background-size: 400% 400%;
-  color: white;
+  background: linear-gradient(-45deg, #0f3892, #01f8ba);
+  color: rgb(51, 48, 48);
   text-align: center;
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
   border-radius: 15px;
   height: 100%; /* Ocupa toda la pantalla */
-  animation: backgroundAnimation 10s ease infinite;
   padding: 20px; 
-}
-
-/* Animación para el fondo */
-@keyframes backgroundAnimation {
-  0% {
-      background-position: 0% 50%;
-  }
-  50% {
-      background-position: 100% 50%;
-  }
-  100% {
-      background-position: 0% 50%;
-  }
 }
 
 /* Ajuste de texto en la portada */
@@ -152,7 +139,7 @@ body {
 }
 
 .arrow-buttons button:disabled {
-  background-color: gray;
+  background-color: rgb(31, 28, 28);
   cursor: not-allowed;
 }
 
@@ -163,17 +150,5 @@ body {
 }
 
 .page img {
-  display: block;
-  margin: 10px auto;
-  max-width: 90%;
-  height: auto;
-}
-
-/* Corrección de márgenes en todo el catálogo */
-.page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Centra el contenido verticalmente */
-  align-items: center; /* Centra el contenido horizontalmente */
-  padding: 20px; /* Espaciado interno uniforme */
+  max-width: 76%;
 }
